@@ -1,4 +1,4 @@
-Tests finished. 48 tests of 48 passed.
+Tests finished. 2 tests of 2 passed.
 Compiled as DEBUG
-Test suite pass at GMT Sun Jan 17 11:16:04 2010
+Test suite pass at GMT Sun Jan 17 19:05:23 2010
 
